--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
   .small{font-size:12px}
   .apRow,.matRow{display:flex;justify-content:space-between;gap:8px;align-items:center;background:#141a34;border:1px solid #2a3156;border-radius:10px;padding:6px 8px}
   .dot{width:10px;height:10px;border-radius:50%}
-  .pill{display:inline-flex;gap:10px;background:#141a34;border:1px solid #2a3156;border-radius:999px;padding:6px 8px;align-items:center}
-  .pill input{accent-color:#6ae3ff}
-  .disabled{opacity:.55;cursor:not-allowed}
   @media (max-width:980px){ .container{grid-template-columns:1fr} }
 </style>
 </head>
@@ -54,23 +51,8 @@
 <header><h1>📶 Wi-Fi Heatmap — Planning (AP Model) + Obstacles — Smooth</h1></header>
 
 <div class="container">
-  <!-- Left panel -->
+  <!-- Left control panel -->
   <aside class="panel">
-    <div class="section">
-      <div class="label">โหมดการใช้งาน</div>
-      <div class="pill">
-        <label style="display:flex;gap:6px;align-items:center">
-          <input type="radio" name="mode" id="modePlanning" checked>
-          <strong>Planning</strong><span class="muted small"> (ใช้ AP + วัสดุ)</span>
-        </label>
-        <label class="disabled" title="Survey จะเปิดใช้ภายหลัง">
-          <input type="radio" name="mode" id="modeSurvey" disabled>
-          <span>Survey</span><span class="muted small"> (จุดวัด RSSI)</span>
-        </label>
-      </div>
-      <div class="small muted">ตอนนี้เปิดเฉพาะ Planning ตามที่สั่งไว้</div>
-    </div>
-
     <div class="section">
       <div class="label">1) อัปโหลดแปลนพื้นที่ (PNG/JPG)</div>
       <div class="row">
@@ -137,8 +119,8 @@
       <div class="label">5) ตั้งค่าเรนเดอร์</div>
       <div class="grid">
         <div>
-          <div class="label">Grid step (px)</div>
-          <input type="number" id="gridStep" value="6" min="2" step="1" />
+          <div class="label">ความเนียน Blur (px)</div>
+          <input type="number" id="blurPx" value="16" min="0" step="1" />
         </div>
         <div>
           <div class="label">โปร่งใสฮีตแมป</div>
@@ -151,9 +133,9 @@
       </div>
       <div class="legend" style="margin-top:10px">
         <div id="grad" class="grad"></div>
-        <div class="small"><span id="legendMin">-90</span> dBm ⟷ <span id="legendMax">-40</span> dBm</div>
+        <div class="small"><span id="legendMin">-80</span> dBm ⟷ <span id="legendMax">-50</span> dBm</div>
       </div>
-      <div class="small muted">โทนสีคงที่: แดง (−90 dBm) → เขียว (−40 dBm)</div>
+      <div class="small muted">โทนสีคงที่: แดง (−80 dBm) → เขียว (−50 dBm)</div>
     </div>
 
     <div class="section">
@@ -180,9 +162,9 @@
 </div>
 
 <script>
-/* ========= Constants ========= */
-const RSSI_MIN = -90;   // แดง
-theRSSI_MAX = -40;      // เขียว
+/* ========= Fixed thresholds ========= */
+const RSSI_MIN = -80;  // แดง
+const RSSI_MAX = -50;  // เขียว
 
 /* ========= Utilities ========= */
 const $ = sel => document.querySelector(sel);
@@ -233,7 +215,6 @@ let scale = { pxPerMeter: null };
 let tempLine = null;
 
 const UI = {
-  mode: 'planning',
   scaleLabel: $('#scaleLabel'),
   modeBadge: $('#modeBadge'),
   apList: $('#apList'),
@@ -292,7 +273,7 @@ function drawOverlays(){
   });
 }
 
-/* ========= Fixed red→green palette (-90 to -40 dBm) ========= */
+/* ========= Fixed red→green palette ========= */
 function makeFixedLegend(){
   const g = $('#grad'); const cvs = document.createElement('canvas');
   cvs.width=256; cvs.height=1; const c=cvs.getContext('2d');
@@ -303,13 +284,13 @@ function makeFixedLegend(){
   g.style.backgroundImage = `url(${cvs.toDataURL()})`;
 }
 function colorFromRSSI(v){
-  const t = clamp((v - RSSI_MIN) / (RSSI_MAX - theRSSI_MAX), 0, 1); // -90→0 (แดง), -40→1 (เขียว)
+  const t = clamp((v - RSSI_MIN) / (RSSI_MAX - RSSI_MIN), 0, 1); // -80→0 (แดง), -50→1 (เขียว)
   const r = Math.round(255*(1-t));
   const g = Math.round(255*t);
-  return `rgb(${r},${g},0)`;
+  return [r,g,0];
 }
 
-/* ========= Geometry: segment intersection ========= */
+/* ========= Geometry / materials ========= */
 function orient(a,b,c){ return (b.x-a.x)*(c.y-a.y) - (b.y-a.y)*(c.x-a.x); }
 function onSeg(a,b,c){ return Math.min(a.x,b.x)-1e-6<=c.x && c.x<=Math.max(a.x,b.x)+1e-6 &&
                                Math.min(a.y,b.y)-1e-6<=c.y && c.y<=Math.max(a.y,b.y)+1e-6; }
@@ -340,52 +321,54 @@ function rssiFromAPs(x,y){
     const d_px = Math.hypot(x-a.x, y-a.y);
     const d_m = Math.max(1e-3, d_px / scale.pxPerMeter); // เมตร
     const lossObs = pathObstacleLoss(P, a);               // dB จากวัสดุ
-    const rssi = a.p0 - 10*a.n*Math.log10(d_m/1.0) - lossObs;
+    const rssi = a.p0 - 10*a.n*Math.log10(d_m) - lossObs; // log10(d/1)=log10(d)
     sum_mW += Math.pow(10, rssi/10);
   }
   return 10 * Math.log10(Math.max(1e-15, sum_mW));
 }
 
-/* ========= Heatmap render (smooth) ========= */
+/* ========= Heatmap render (per-pixel + blur) ========= */
 function renderHeatmap(){
   if(!floorImg){ alert('โปรดอัปโหลดภาพแปลนก่อน'); return; }
   if(aps.length===0){ alert('กรุณาวาง AP อย่างน้อย 1 ตัว'); return; }
 
-  const gridStep = parseInt($('#gridStep').value||'6',10);
   const alpha = clamp(parseFloat($('#alpha').value||'0.6'),0,1);
-  const blurPx = Math.max(4, Math.round(gridStep*1.5)); // เบลอพอให้เนียนตามสัดส่วน step
+  const blurPx = Math.max(0, parseInt($('#blurPx').value||'16',10));
 
   UI.legendMin.textContent = RSSI_MIN;
-  UI.legendMax.textContent = theRSSI_MAX;
+  UI.legendMax.textContent = RSSI_MAX;
   makeFixedLegend();
 
-  // 1) เคลียร์และวาดพื้นหลัง (แปลน)
+  // 1) วาดพื้นหลัง
   drawBase();
 
-  // 2) เรนเดอร์ฮีตแมปลง offscreen canvas แบบ “บล็อกสีทึบ”
+  // 2) คำนวณลง offscreen แบบ "ต่อพิกเซล"
   const heat = document.createElement('canvas');
   heat.width = canvas.width; heat.height = canvas.height;
   const hctx = heat.getContext('2d', { willReadFrequently:true });
+  let img = hctx.createImageData(heat.width, heat.height);
+  let arr = img.data;
 
-  const block = Math.max(2, gridStep|0);
-  for(let y=0; y<canvas.height; y+=block){
-    for(let x=0; x<canvas.width; x+=block){
-      const val = rssiFromAPs(x+block/2, y+block/2); // sample กลางบล็อกให้เนียน
-      hctx.fillStyle = colorFromRSSI(val);
-      hctx.fillRect(x, y, block, block);
+  // per-pixel loop (เร็วพอสำหรับแผนที่ทั่วไป; ถ้าภาพใหญ่มากค่อยลด sampling)
+  for(let y=0; y<heat.height; y++){
+    for(let x=0; x<heat.width; x++){
+      const rssi = rssiFromAPs(x, y);
+      const [r,g,b] = colorFromRSSI(rssi);
+      const idx = (y*heat.width + x) * 4;
+      arr[idx+0]=r; arr[idx+1]=g; arr[idx+2]=b; arr[idx+3]=255;
     }
   }
+  hctx.putImageData(img, 0, 0);
 
-  // 3) วางซ้อนด้วย blur + alpha → สีเนียนไม่เป็นเหลี่ยม
+  // 3) วางซ้อนด้วย blur + alpha → เนียน ไม่เป็นจุด/พิกเซล
   ctx.save();
   ctx.globalAlpha = alpha;
-  ctx.imageSmoothingEnabled = true;
-  ctx.filter = `blur(${blurPx}px)`;
+  if(blurPx>0) ctx.filter = `blur(${blurPx}px)`;
   ctx.drawImage(heat, 0, 0);
   ctx.filter = 'none';
   ctx.restore();
 
-  // 4) วาด overlay คมชัดทับบนฮีตแมป (วัสดุ, เส้นชั่วคราว, AP)
+  // 4) วาด overlay (วัสดุ/เส้น/ป้าย/AP)
   drawOverlays();
 }
 
@@ -467,10 +450,9 @@ $('#btnExport').onclick = ()=>{ const a=document.createElement('a'); a.download=
 
 $('#btnSave').onclick = ()=>{
   const payload = {
-    mode: UI.mode, // 'planning'
     aps, segments,
-    gridStep: +($('#gridStep').value||6),
     alpha: +($('#alpha').value||0.6),
+    blurPx: +($('#blurPx').value||16),
     scale: scale.pxPerMeter
   };
   download('heatmap_project_planning_smooth.json', JSON.stringify(payload,null,2));
@@ -483,8 +465,8 @@ $('#loadJson').addEventListener('change', e=>{
       const obj = JSON.parse(reader.result);
       aps      = obj.aps||[];
       segments = obj.segments||[];
-      $('#gridStep').value = obj.gridStep ?? 6;
-      $('#alpha').value    = obj.alpha    ?? 0.6;
+      $('#alpha').value  = obj.alpha ?? 0.6;
+      $('#blurPx').value = obj.blurPx ?? 16;
       scale.pxPerMeter = obj.scale || null;
       UI.scaleLabel.textContent = scale.pxPerMeter? `${(scale.pxPerMeter).toFixed(1)} px/เมตร`:'ยังไม่ตั้ง';
       drawBase(); drawOverlays(); makeFixedLegend();
@@ -541,11 +523,9 @@ document.addEventListener('keydown', e=>{
 
 /* ========= Init ========= */
 (function init(){
-  UI.mode='planning';
   UI.legendMin.textContent = RSSI_MIN;
-  UI.legendMax.textContent = theRSSI_MAX;
+  UI.legendMax.textContent = RSSI_MAX;
   makeFixedLegend();
-  $('#modePlanning').checked = true;
   drawBase(); drawOverlays();
 })();
 </script>
