--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Wi-Fi Heatmap — Planning + Obstacles — Smooth + Probe + Overlay (Fixed)</title>
+<title>Wi-Fi Heatmap — Planning + Obstacles — Smooth + Probe + Overlay (No Alerts)</title>
 <style>
   :root{ --bg:#0f1220; --panel:#171a2b; --muted:#9aa4b2; --text:#e8ecf1;
          --card:#1b2035; --btn:#232845; --ring:#2a7fff55; --danger:#ff7b7b; }
@@ -43,13 +43,12 @@
   .dot{width:10px;height:10px;border-radius:50%}
   @media (max-width:980px){ .container{grid-template-columns:1fr} }
 
-  /* stage to stack canvases */
+  /* stage stack */
   .stage{position:relative;display:inline-block}
-  /* สำคัญ: ตั้งขนาด CSS ให้ตรงกับตัวแคนวาสจริงเสมอ (เราจะเซ็ตผ่าน JS) */
-  #canvas, #overlay{display:block}
+  #canvas,#overlay{display:block}
   #overlay{
     position:absolute; left:0; top:0; pointer-events:none;
-    z-index:3; /* ให้อยู่เหนือฮีตแมปแน่นอน */
+    z-index:3;
   }
 
   /* probe tooltip */
@@ -62,7 +61,7 @@
 </style>
 </head>
 <body>
-<header><h1>📶 Wi-Fi Heatmap — Planning + Obstacles — Smooth + Probe + Overlay (Fixed)</h1></header>
+<header><h1>📶 Wi-Fi Heatmap — Planning + Obstacles — Smooth + Probe + Overlay (No Alerts)</h1></header>
 
 <div class="container">
   <aside class="panel">
@@ -210,7 +209,9 @@ const MATERIALS={
   human:{name:'ร่างกายคน (เฉลี่ย)',color:'#d6b3ff',att:3}
 };
 const matTypeSel=$('#matType');
-for(const k of Object.keys(MATERIALS)){ const o=document.createElement('option'); o.value=k; o.textContent=MATERIALS[k].name; matTypeSel.appendChild(o); }
+for(const k of Object.keys(MATERIALS)){
+  const o=document.createElement('option'); o.value=k; o.textContent=MATERIALS[k].name; matTypeSel.appendChild(o);
+}
 matTypeSel.value='brick'; $('#matAtt').value=MATERIALS['brick'].att;
 matTypeSel.addEventListener('change',()=>$('#matAtt').value=MATERIALS[matTypeSel.value].att);
 
@@ -230,15 +231,14 @@ const UI={
   stage:$('#stage'),
 };
 
-/* ===== size sync (สำคัญสุด) ===== */
+/* ===== size sync ===== */
 function applyCanvasCSSSize(){
-  // ให้ CSS width/height = ขนาดพิกเซลจริง เพื่อไม่ให้เบี้ยว
   canvas.style.width = canvas.width + 'px';
   canvas.style.height = canvas.height + 'px';
   overlay.style.width = canvas.width + 'px';
   overlay.style.height = canvas.height + 'px';
   overlay.style.left = '0px';
-  overlay.style.top = '0px';
+  overlay.style.top  = '0px';
 }
 function fitCanvasToImage(img){
   const maxW=1920,maxH=1080;
@@ -250,7 +250,7 @@ function fitCanvasToImage(img){
 }
 window.addEventListener('resize', applyCanvasCSSSize);
 
-/* ===== base/permanent drawing ===== */
+/* ===== base/permanent ===== */
 function drawBase(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   if(floorImg){ ctx.drawImage(floorImg,0,0,canvas.width,canvas.height); }
@@ -282,7 +282,7 @@ function drawPermanent(){
   });
 }
 
-/* ===== overlay drawing (arrows) ===== */
+/* ===== overlay arrows ===== */
 function clearOverlay(){ octx.clearRect(0,0,overlay.width,overlay.height); }
 function drawArrow(a,b,opts={}){
   const {color='#6ae3ff',width=3.5,head=12,dash=[10,6],label=''}=opts;
@@ -291,7 +291,6 @@ function drawArrow(a,b,opts={}){
   octx.beginPath(); octx.moveTo(a.x,a.y); octx.lineTo(b.x,b.y); octx.stroke();
   octx.setLineDash([]);
 
-  // arrow head
   const ang=Math.atan2(b.y-a.y,b.x-a.x);
   octx.beginPath();
   octx.moveTo(b.x,b.y);
@@ -299,7 +298,6 @@ function drawArrow(a,b,opts={}){
   octx.lineTo(b.x-head*Math.cos(ang + Math.PI/7), b.y-head*Math.sin(ang + Math.PI/7));
   octx.closePath(); octx.fillStyle=color; octx.fill();
 
-  // endpoints
   octx.fillStyle='#fff'; octx.strokeStyle='#000'; octx.lineWidth=2;
   [a,b].forEach(p=>{ octx.beginPath(); octx.arc(p.x,p.y,4,0,Math.PI*2); octx.fill(); octx.stroke(); });
 
@@ -339,9 +337,10 @@ function pathObstacleLoss(pFrom,pTo){
 
 /* ===== AP model ===== */
 // RSSI(d) = P0 - 10*n*log10(d) - obstacleLoss ; d (m)
+// (เอา alert ออกหมด: ถ้าไม่มีสเกล ให้ส่งค่าต่ำสุดกลับไปเงียบ ๆ)
 function rssiFromAPs(x,y){
-  if(!aps.length) return null;
-  if(!scale.pxPerMeter){ alert('โปรดตั้งสเกลก่อน (จำเป็นสำหรับ AP)'); throw new Error('no-scale'); }
+  if(!aps.length) return RSSI_MIN;
+  if(!scale.pxPerMeter) return RSSI_MIN;
   const P={x,y}; let sum_mW=0;
   for(const a of aps){
     const d_px=Math.hypot(x-a.x,y-a.y);
@@ -355,8 +354,8 @@ function rssiFromAPs(x,y){
 
 /* ===== heatmap render (per-pixel + blur) ===== */
 function renderHeatmap(){
-  if(!floorImg){ alert('โปรดอัปโหลดภาพแปลนก่อน'); return; }
-  if(aps.length===0){ alert('กรุณาวาง AP อย่างน้อย 1 ตัว'); return; }
+  if(!floorImg) return;      // เงียบ ๆ
+  if(aps.length===0) return; // เงียบ ๆ
   const alpha=clamp(parseFloat($('#alpha').value||'0.6'),0,1);
   const blurPx=Math.max(0,parseInt($('#blurPx').value||'16',10));
   UI.legendMin.textContent=RSSI_MIN; UI.legendMax.textContent=RSSI_MAX; makeFixedLegend();
@@ -440,7 +439,7 @@ $('#btnExport').onclick =()=>{ const a=document.createElement('a'); a.download='
 
 $('#btnSave').onclick=()=>{
   const payload={ aps, segments, alpha:+($('#alpha').value||0.6), blurPx:+($('#blurPx').value||16), scale:scale.pxPerMeter };
-  download('heatmap_project_planning_overlay_fix.json', JSON.stringify(payload,null,2));
+  download('heatmap_project_planning_noalerts.json', JSON.stringify(payload,null,2));
 };
 $('#loadJson').addEventListener('change', e=>{
   const f=e.target.files[0]; if(!f) return;
@@ -454,12 +453,12 @@ $('#loadJson').addEventListener('change', e=>{
       $('#scaleLabel').textContent=scale.pxPerMeter?`${(scale.pxPerMeter).toFixed(1)} px/เมตร`:'ยังไม่ตั้ง';
       drawBase(); if(hasRendered) renderHeatmap(); else drawPermanent();
       refreshAPList(); refreshMatList();
-    }catch(err){ alert('ไฟล์ JSON ไม่ถูกต้อง'); }
+    }catch(err){ console.error('Invalid project JSON', err); }
   };
   reader.readAsText(f);
 });
 
-/* ===== mouse drag on overlay (เส้น/หัวลูกศรสด ๆ) ===== */
+/* ===== drag on canvas (draw temp on overlay) ===== */
 function startDrag(x,y){ dragging=true; dragStart={x,y}; clearOverlay(); }
 function updateDrag(x,y){
   if(!dragging||!dragStart) return;
@@ -493,7 +492,7 @@ function endDrag(x,y){
   dragging=false; dragStart=null;
 }
 
-/* attach to CANVAS (เมาส์โดน canvas, แต่วาดลง overlay) */
+/* mouse binding */
 canvas.addEventListener('mousedown', e=>{
   const {x,y}=getCanvasPos(e);
   if(mode==='scale' || mode==='mat') startDrag(x,y);
@@ -508,17 +507,17 @@ canvas.addEventListener('mouseup', e=>{
 });
 canvas.addEventListener('mouseleave', ()=>{ dragging=false; dragStart=null; clearOverlay(); });
 
-/* click for AP/probe */
+/* click for AP / probe */
 canvas.addEventListener('click', e=>{
   const {x,y,rect}=getCanvasPos(e);
   if(mode==='ap'){
-    if(!scale.pxPerMeter){ alert('โปรดตั้งสเกลก่อนวาง AP'); return; }
+    if(!scale.pxPerMeter) return; // เงียบ ๆ ถ้ายังไม่ตั้งสเกล
     const label=$('#apLabel').value.trim()||`AP-${aps.length+1}`;
     const p0=parseFloat($('#apP0').value||'-40'); const n=parseFloat($('#apN').value||'2.2');
     aps.push({x,y,label,p0,n});
     drawBase(); if(hasRendered) renderHeatmap(); else drawPermanent(); refreshAPList();
   }else if(mode==='idle'){
-    if(!hasRendered){ alert('โปรดกด "สร้าง Heatmap" ก่อน แล้วค่อยคลิกเพื่อดูค่า'); return; }
+    if(!hasRendered) return; // ไม่ขึ้นแจ้งเตือนใด ๆ
     renderHeatmap(); showProbeAt(x,y,rect);
   }
 });
@@ -539,7 +538,7 @@ $('#fileInput').addEventListener('change', e=>{
     floorImg=document.createElement('canvas');
     floorImg.width=img.width; floorImg.height=img.height;
     floorImg.getContext('2d').drawImage(img,0,0);
-    fitCanvasToImage(img); // ตั้งขนาดและซิงก์ CSS
+    fitCanvasToImage(img);
     aps=[]; segments=[]; scale.pxPerMeter=null; hasRendered=false;
     $('#scaleLabel').textContent='ยังไม่ตั้ง';
     drawBase(); drawPermanent(); makeFixedLegend(); clearOverlay(); hideProbe();
@@ -550,7 +549,6 @@ $('#fileInput').addEventListener('change', e=>{
 $('#btnClear').onclick=()=>{
   floorImg=null; aps=[]; segments=[]; scale.pxPerMeter=null; hasRendered=false;
   $('#scaleLabel').textContent='ยังไม่ตั้ง';
-  // รีเซ็ตขนาดให้กลับไปค่าเดิมและซิงก์ CSS
   canvas.width=1280; canvas.height=800; overlay.width=1280; overlay.height=800; applyCanvasCSSSize();
   drawBase(); drawPermanent(); clearOverlay(); hideProbe();
   refreshAPList(); refreshMatList();
@@ -558,7 +556,6 @@ $('#btnClear').onclick=()=>{
 
 /* init */
 (function init(){
-  // ซิงก์ CSS ขนาดเริ่มต้น (กันกรณีบางธีมย่อ canvas อัตโนมัติ)
   applyCanvasCSSSize();
   UI.legendMin.textContent=RSSI_MIN; UI.legendMax.textContent=RSSI_MAX; makeFixedLegend();
   drawBase(); drawPermanent(); clearOverlay(); hideProbe();
@@ -566,3 +563,4 @@ $('#btnClear').onclick=()=>{
 </script>
 </body>
 </html>
+
