--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Wi-Fi Heatmap — Planning + Obstacles — Smooth + Probe + Overlay (No Alerts)</title>
+<title>Wi-Fi Heatmap — Survey / Planning</title>
 <style>
   :root{ --bg:#0f1220; --panel:#171a2b; --muted:#9aa4b2; --text:#e8ecf1;
          --card:#1b2035; --btn:#232845; --ring:#2a7fff55; --danger:#ff7b7b; }
@@ -11,10 +11,13 @@
   html,body{height:100%}
   body{margin:0;background:linear-gradient(120deg,#0f1220,#0e1428 60%,#0f1220);
        color:var(--text);font:500 16px/1.45 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
-  header{padding:14px 18px;border-bottom:1px solid #202540;background:rgba(17,22,36,.7);
-         position:sticky;top:0;backdrop-filter:blur(8px);z-index:50}
-  header h1{margin:0;font-size:18px}
-  .container{display:grid;grid-template-columns:380px 1fr;gap:14px;padding:14px;height:calc(100% - 64px)}
+  header{padding:12px 16px;border-bottom:1px solid #202540;background:rgba(17,22,36,.7);
+         position:sticky;top:0;backdrop-filter:blur(8px);z-index:50;display:flex;align-items:center;gap:10px}
+  header h1{margin:0;font-size:18px;flex:1}
+  .mode-switch{display:flex;gap:6px}
+  .pill{padding:6px 10px;border-radius:999px;border:1px solid #2a3156;background:#1a1f39;color:#cfd6ff;cursor:pointer}
+  .pill.active{background:#2a3569;border-color:#3d4c9a;color:#fff;box-shadow:0 0 0 2px var(--ring)}
+  .container{display:grid;grid-template-columns:380px 1fr;gap:14px;padding:14px;height:calc(100% - 56px)}
   .panel{background:var(--panel);border:1px solid #242a49;border-radius:14px;padding:14px;overflow:auto}
   .section{margin-bottom:14px;padding-bottom:12px;border-bottom:1px dashed #2a3156}
   .section:last-child{border-bottom:0;margin-bottom:0;padding-bottom:0}
@@ -43,14 +46,10 @@
   .dot{width:10px;height:10px;border-radius:50%}
   @media (max-width:980px){ .container{grid-template-columns:1fr} }
 
-  /* stage stack */
+  /* canvases stack */
   .stage{position:relative;display:inline-block}
   #canvas,#overlay{display:block}
-  #overlay{
-    position:absolute; left:0; top:0; pointer-events:none;
-    z-index:3;
-  }
-
+  #overlay{position:absolute; left:0; top:0; pointer-events:none; z-index:3;}
   /* probe tooltip */
   #probe{position:absolute;display:none;transform:translate(10px,-10px);
          background:#0e1329;border:1px solid #2a3156;border-radius:10px;padding:6px 8px;
@@ -58,12 +57,51 @@
          box-shadow:0 6px 20px rgba(0,0,0,.35)}
   #probe .sw{display:inline-block;width:10px;height:10px;border-radius:50%;margin-right:6px;border:1px solid #0006}
   #probe .sub{font-weight:500;color:#9aa4b2;margin-top:2px}
+
+  /* mode picker overlay (startup) */
+  #modePicker{
+    position:fixed; inset:0; background:linear-gradient(180deg, rgba(5,8,22,.85), rgba(10,14,34,.85));
+    display:flex; align-items:center; justify-content:center; z-index:80;
+  }
+  .pickerBox{
+    background:#141a2e;border:1px solid #2a3156;border-radius:16px;padding:22px;max-width:520px;width:92%;
+    box-shadow:0 18px 60px rgba(0,0,0,.45)
+  }
+  .pickerTitle{font-size:18px;margin:0 0 12px}
+  .pickerRow{display:flex;gap:12px;flex-wrap:wrap}
+  .pickBtn{flex:1;min-width:180px;padding:16px;border-radius:14px;border:1px solid #2a3156;background:#1b2141;color:#e8ecf1;cursor:pointer}
+  .pickBtn:hover{transform:translateY(-1px);box-shadow:0 6px 20px rgba(0,0,0,.35)}
+  .pickHint{font-size:12px;color:#9aa4b2;margin-top:10px}
+  /* Survey placeholder */
+  .surveyBlank{
+    background:#ffffff;border-radius:12px;border:1px dashed #cccccc; min-height:300px;
+    display:flex;align-items:center;justify-content:center;color:#333;font:600 18px/1.3 ui-sans-serif,system-ui
+  }
 </style>
 </head>
 <body>
-<header><h1>📶 Wi-Fi Heatmap — Planning + Obstacles — Smooth + Probe + Overlay (No Alerts)</h1></header>
+<header>
+  <h1>📶 Wi-Fi Heatmap</h1>
+  <div class="mode-switch">
+    <div class="pill active" id="pillPlanning">Planning</div>
+    <div class="pill" id="pillSurvey">Survey</div>
+  </div>
+</header>
 
-<div class="container">
+<!-- Startup picker -->
+<div id="modePicker">
+  <div class="pickerBox">
+    <h2 class="pickerTitle">เลือกโหมดการทำงาน</h2>
+    <div class="pickerRow">
+      <button class="pickBtn" id="pickPlanning">🛠️ Planning — วาง AP / วัสดุ / สร้าง Heatmap</button>
+      <button class="pickBtn" id="pickSurvey">🧪 Survey — (เริ่มว่างเปล่า) พัฒนาต่อภายหลัง</button>
+    </div>
+    <div class="pickHint">สามารถสลับโหมดได้ที่มุมขวาบนตลอดเวลา</div>
+  </div>
+</div>
+
+<div class="container" id="appPlanning" style="display:grid">
+  <!-- Left control panel (Planning) -->
   <aside class="panel">
     <div class="section">
       <div class="label">1) อัปโหลดแปลนพื้นที่ (PNG/JPG)</div>
@@ -163,6 +201,7 @@
     </div>
   </aside>
 
+  <!-- Right workspace (Planning) -->
   <main class="panel">
     <div class="row">
       <span class="badge" id="modeBadge">โหมด: Idle</span>
@@ -180,8 +219,49 @@
   </main>
 </div>
 
+<!-- Survey mode layout (very simple blank page to extend later) -->
+<div class="container" id="appSurvey" style="display:none;grid-template-columns:1fr">
+  <main class="panel" style="display:flex;flex-direction:column;gap:12px">
+    <div class="row">
+      <span class="badge">โหมด: Survey (Placeholder)</span>
+      <span class="muted small">หน้านี้เว้นว่างไว้ให้คุณพัฒนาต่อ</span>
+    </div>
+    <div class="surveyBlank">Survey Mode — Blank Canvas</div>
+  </main>
+</div>
+
 <script>
-/* ===== thresholds & utilities ===== */
+/* ===== app mode switch ===== */
+let appMode = 'planning'; // default
+const modePicker = document.getElementById('modePicker');
+const appPlanning = document.getElementById('appPlanning');
+const appSurvey   = document.getElementById('appSurvey');
+const pillPlanning = document.getElementById('pillPlanning');
+const pillSurvey   = document.getElementById('pillSurvey');
+const pickPlanning = document.getElementById('pickPlanning');
+const pickSurvey   = document.getElementById('pickSurvey');
+
+function setMode(mode){
+  appMode = mode;
+  if(mode==='planning'){
+    appPlanning.style.display='grid';
+    appSurvey.style.display='none';
+    pillPlanning.classList.add('active');
+    pillSurvey.classList.remove('active');
+  }else{
+    appPlanning.style.display='none';
+    appSurvey.style.display='grid';
+    pillPlanning.classList.remove('active');
+    pillSurvey.classList.add('active');
+  }
+  modePicker.style.display='none';
+}
+pillPlanning.onclick = ()=> setMode('planning');
+pillSurvey.onclick   = ()=> setMode('survey');
+pickPlanning.onclick = ()=> setMode('planning');
+pickSurvey.onclick   = ()=> setMode('survey');
+
+/* ===== thresholds & utilities (Planning) ===== */
 const RSSI_MIN=-80, RSSI_MAX=-50;
 const $=s=>document.querySelector(s);
 const clamp=(v,a,b)=>Math.max(a,Math.min(b,v));
@@ -290,17 +370,14 @@ function drawArrow(a,b,opts={}){
   octx.lineWidth=width; octx.setLineDash(dash); octx.strokeStyle=color;
   octx.beginPath(); octx.moveTo(a.x,a.y); octx.lineTo(b.x,b.y); octx.stroke();
   octx.setLineDash([]);
-
   const ang=Math.atan2(b.y-a.y,b.x-a.x);
   octx.beginPath();
   octx.moveTo(b.x,b.y);
   octx.lineTo(b.x-head*Math.cos(ang - Math.PI/7), b.y-head*Math.sin(ang - Math.PI/7));
   octx.lineTo(b.x-head*Math.cos(ang + Math.PI/7), b.y-head*Math.sin(ang + Math.PI/7));
   octx.closePath(); octx.fillStyle=color; octx.fill();
-
   octx.fillStyle='#fff'; octx.strokeStyle='#000'; octx.lineWidth=2;
   [a,b].forEach(p=>{ octx.beginPath(); octx.arc(p.x,p.y,4,0,Math.PI*2); octx.fill(); octx.stroke(); });
-
   if(label){ octx.font='12px ui-monospace,monospace'; octx.fillStyle='#cfe6ff'; octx.fillText(label, b.x+10, b.y-8); }
   octx.restore();
 }
@@ -337,7 +414,7 @@ function pathObstacleLoss(pFrom,pTo){
 
 /* ===== AP model ===== */
 // RSSI(d) = P0 - 10*n*log10(d) - obstacleLoss ; d (m)
-// (เอา alert ออกหมด: ถ้าไม่มีสเกล ให้ส่งค่าต่ำสุดกลับไปเงียบ ๆ)
+// (ไร้ alert: ถ้าไม่มีสเกล/AP ให้คืนค่าต่ำสุดเงียบ ๆ)
 function rssiFromAPs(x,y){
   if(!aps.length) return RSSI_MIN;
   if(!scale.pxPerMeter) return RSSI_MIN;
@@ -354,14 +431,12 @@ function rssiFromAPs(x,y){
 
 /* ===== heatmap render (per-pixel + blur) ===== */
 function renderHeatmap(){
-  if(!floorImg) return;      // เงียบ ๆ
-  if(aps.length===0) return; // เงียบ ๆ
+  if(!floorImg) return;
+  if(aps.length===0) return;
   const alpha=clamp(parseFloat($('#alpha').value||'0.6'),0,1);
   const blurPx=Math.max(0,parseInt($('#blurPx').value||'16',10));
   UI.legendMin.textContent=RSSI_MIN; UI.legendMax.textContent=RSSI_MAX; makeFixedLegend();
-
   drawBase();
-
   const heat=document.createElement('canvas'); heat.width=canvas.width; heat.height=canvas.height;
   const hctx=heat.getContext('2d',{willReadFrequently:true});
   let img=hctx.createImageData(heat.width,heat.height), arr=img.data;
@@ -372,10 +447,8 @@ function renderHeatmap(){
     }
   }
   hctx.putImageData(img,0,0);
-
   ctx.save(); ctx.globalAlpha=alpha; if(blurPx>0) ctx.filter=`blur(${blurPx}px)`;
   ctx.drawImage(heat,0,0); ctx.filter='none'; ctx.restore();
-
   drawPermanent(); hasRendered=true;
 }
 
@@ -439,7 +512,7 @@ $('#btnExport').onclick =()=>{ const a=document.createElement('a'); a.download='
 
 $('#btnSave').onclick=()=>{
   const payload={ aps, segments, alpha:+($('#alpha').value||0.6), blurPx:+($('#blurPx').value||16), scale:scale.pxPerMeter };
-  download('heatmap_project_planning_noalerts.json', JSON.stringify(payload,null,2));
+  download('heatmap_project_planning.json', JSON.stringify(payload,null,2));
 };
 $('#loadJson').addEventListener('change', e=>{
   const f=e.target.files[0]; if(!f) return;
@@ -494,73 +567,39 @@ function endDrag(x,y){
 
 /* mouse binding */
 canvas.addEventListener('mousedown', e=>{
+  if(appMode!=='planning') return;
   const {x,y}=getCanvasPos(e);
   if(mode==='scale' || mode==='mat') startDrag(x,y);
 });
 canvas.addEventListener('mousemove', e=>{
+  if(appMode!=='planning') return;
   const {x,y}=getCanvasPos(e);
   if(mode==='scale' || mode==='mat') updateDrag(x,y);
 });
 canvas.addEventListener('mouseup', e=>{
+  if(appMode!=='planning') return;
   const {x,y}=getCanvasPos(e);
   if(mode==='scale' || mode==='mat') endDrag(x,y);
 });
-canvas.addEventListener('mouseleave', ()=>{ dragging=false; dragStart=null; clearOverlay(); });
+canvas.addEventListener('mouseleave', ()=>{ if(appMode!=='planning') return; dragging=false; dragStart=null; clearOverlay(); });
 
 /* click for AP / probe */
 canvas.addEventListener('click', e=>{
+  if(appMode!=='planning') return;
   const {x,y,rect}=getCanvasPos(e);
   if(mode==='ap'){
-    if(!scale.pxPerMeter) return; // เงียบ ๆ ถ้ายังไม่ตั้งสเกล
+    if(!scale.pxPerMeter) return;
     const label=$('#apLabel').value.trim()||`AP-${aps.length+1}`;
     const p0=parseFloat($('#apP0').value||'-40'); const n=parseFloat($('#apN').value||'2.2');
     aps.push({x,y,label,p0,n});
     drawBase(); if(hasRendered) renderHeatmap(); else drawPermanent(); refreshAPList();
   }else if(mode==='idle'){
-    if(!hasRendered) return; // ไม่ขึ้นแจ้งเตือนใด ๆ
+    if(!hasRendered) return;
     renderHeatmap(); showProbeAt(x,y,rect);
   }
 });
 
-/* keyboard */
+/* keyboard (Planning) */
 document.addEventListener('keydown', e=>{
-  if(e.key==='s'||e.key==='S'){ mode='scale'; $('#modeBadge').textContent='โหมด: ตั้งสเกล'; }
-  if(e.key==='a'||e.key==='A'){ mode='ap';    $('#modeBadge').textContent='โหมด: วาง AP (คลิก)'; }
-  if(e.key==='w'||e.key==='W'){ mode='mat';   $('#modeBadge').textContent='โหมด: วัสดุ (ลากเส้น)'; }
-  if(e.key==='h'||e.key==='H'){ renderHeatmap(); }
-});
-
-/* file load & clear */
-$('#fileInput').addEventListener('change', e=>{
-  const f=e.target.files[0]; if(!f) return;
-  const img=new Image();
-  img.onload=()=>{
-    floorImg=document.createElement('canvas');
-    floorImg.width=img.width; floorImg.height=img.height;
-    floorImg.getContext('2d').drawImage(img,0,0);
-    fitCanvasToImage(img);
-    aps=[]; segments=[]; scale.pxPerMeter=null; hasRendered=false;
-    $('#scaleLabel').textContent='ยังไม่ตั้ง';
-    drawBase(); drawPermanent(); makeFixedLegend(); clearOverlay(); hideProbe();
-    refreshAPList(); refreshMatList();
-  };
-  img.src=URL.createObjectURL(f);
-});
-$('#btnClear').onclick=()=>{
-  floorImg=null; aps=[]; segments=[]; scale.pxPerMeter=null; hasRendered=false;
-  $('#scaleLabel').textContent='ยังไม่ตั้ง';
-  canvas.width=1280; canvas.height=800; overlay.width=1280; overlay.height=800; applyCanvasCSSSize();
-  drawBase(); drawPermanent(); clearOverlay(); hideProbe();
-  refreshAPList(); refreshMatList();
-};
-
-/* init */
-(function init(){
-  applyCanvasCSSSize();
-  UI.legendMin.textContent=RSSI_MIN; UI.legendMax.textContent=RSSI_MAX; makeFixedLegend();
-  drawBase(); drawPermanent(); clearOverlay(); hideProbe();
-})();
-</script>
-</body>
-</html>
-
+  if(appMode!=='planning') return;
+  if(e.key==='s'||e.key
